--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ryker Kollmyer
-logo: /assets/img/logo.png
+logo: /assets/img/ryker.jpg
 description: Drones · Multi-Agent Systems · AI · Planes ;)
 show_downloads: true
 google_analytics:
