--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Ryker Kollmyer
+title: Ryker Kolllmyer
 logo: /assets/img/ryker.jpg
 description: Drones · Multi-Agent Systems · AI · Planes ;)
 show_downloads: true
