--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Ryker Kolllmyer
 logo: /assets/img/ryker.jpg
-description: Drones · Multi-Agent Systems · AI · Planes ;)
+description: Drones · Multi-Agent Systems · AI · Planes
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
