--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ryker Kolllmyer
-logo: /assets/img/ryker.jpg
+logo: /assets/img/sadasdasd.png
 description: Drones · Multi-Agent Systems · AI · Planes
 show_downloads: true
 google_analytics:
